fix: cat-list align

--- a/css/style.css
+++ b/css/style.css
@@ -8121,6 +8121,17 @@ body.admin-bar .header-menu-area.sticky_menu {
   text-transform: uppercase;
   cursor: default;
 }
+.single-post-item .blog-post-cat span {
+  float: left;
+  margin-right: 30px;
+  margin-top: 2px;
+}
+.single-post-item .blog-post-cat .post-cat-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  align-items: center;
+}
 .single-post-item .blog-post-tag {
   display: inline-block;
 }
